[package]
name = "rust_bevy"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "ruest_bevy"
path = "src/main.rs"

[dependencies]
#tokio = { version = "1.19", features = ["full"] }
bevy = { version = "0.10.1" }

## Enable a small amount of optimization in debug mode
#[profile.dev]
#opt-level = 1
#
## Enable high optimizations for dependencies (incl. Bevy), but not for our code:
#[profile.dev.package."*"]
#opt-level = 3